# rr-pontryagin-embedded

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: .gitignore  colab_cls_sugarcane.ipynb  colab_experiments.ipynb  combined_comparison.py  compare_gradcam.py  compare_models.py  compare_unet.py  embedding_energy.py  extract_persample_task1_seg.py  extract_persample_task2_cls.py  extract_persample_task3_fss.py  extract_persample_task4_voc.py  fss_sugarcane_colab.ipynb  generate_comparison_figures.py  generate_energy_cls.py  generate_energy_gt.py  generate_fss_cam_metrics.py  generate_fss_episode_fig.py  generate_fss_iou.py  generate_fss_mc_variance.py  generate_pascalvoc_interpretability.py  generate_pascalvoc_tables_figs.py  generate_rfpe_methodology.py  interpretability_analysis.py  interpretability_cls_sugarcane.py  interpretability_fss.py  interpretability_unet.py  run_cls_sugarcane.py  run_fss_sugarcane.py  run_seg_pascalvoc.py  run_seg_uav.py  run_seg_uav_unet.py  run_statistical_tests.py  seg_pascalvoc_colab.ipynb  statistical_tests.py  tune_cls_sugarcane.py  tune_fss_sugarcane.py  tune_seg_pascalvoc.py  tune_seg_uav.py  tune_seg_uav_unet.py
experiments/configs/: cls_sugarcane.py  fss_sugarcane.py  seg_pascalvoc.py  seg_uav.py  seg_uav_unet.py
experiments/report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
src/prfe/: __init__.py
src/prfe/data/: __init__.py  fss_dataset.py
src/prfe/layers/: __init__.py  rff.py  (+3 more)
tests/: test_hyperbolic.py  test_layers.py  test_losses.py  test_unet.py
(+15 files in other folders)
